--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "agenda": "^5.0.0",
     "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
@@ -9,8 +10,9 @@
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.11.0",
     "nodemailer": "^6.10.0",
+    "punycode": "^2.3.1",
     "validator": "^13.12.0"
   },
   "name": "task-manager",
